assets/css/style.css
/*  --------- Global */

body {
    margin: 0;
    padding: 0;
    font-family: 'Lato', sans-serif;
    color: #0172bb;
}

section {
    margin-bottom: 50px;
}

.heading {
    text-align: center;
    font-weight: 700;
    font-size: 26px;
    margin: 50px 0;
}

.subheading {
    text-align: center;
    font-weight: 600;
    font-size: 20px;
}

.icon {
    font-size: 30px;
}

.container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    padding: 0 20px;
}

/*  --------- Colors */

.light {
    color: #eaeaea;
}

.bg-light {
    background-color: #eaeaea;
}

.blue {
    color: #0172bb;
}

.bg-blue {
    background-color: #0172bb;
}

.bg-gold {
    background-color: #eec802;
    border: 1px solid #eec802;
    color: #856404;
}


/*  -----------   Nav */

.logo {
    display: inline-block;
}

.nav-list {
    display: flex;
    justify-content: space-between;
    flex-flow: row;
    align-items: baseline;
    list-style-type: none;
}

ul li {
    padding: 0 20px;
}

.current {
    text-decoration: underline;
}

.dropdown-item:hover {
    color: #002e4b;
    text-decoration: underline;
}

li a {
    text-decoration: none;
    color: #0172bb;
    font-size: 16px;
    font-weight: 700;
}

li a:hover {
    color: #002e4b;
}

.callout {
    display: flex;
    justify-content: space-between;
    background-color: #eec802;
    color: #856404;
    padding: 5px 15px;
    margin-top: 0;
    margin-bottom: 10px;
    border-radius: 2%;
}

.callout-txt {
    font-size: 16px;
    margin: 5px auto;
}

.grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1rem;
    max-width: 80%;
    margin: 0 auto;
}

.grid-sm {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    padding: 0 20px;
    max-width: 70%;
    margin: 0 auto;
    text-align: center;
}

.card {
    border-radius: 8px;
    border: 1px solid #eaeaea;
    box-shadow: 0 0.5rem 1.2rem rgba(0, 0, 0, .2);
    padding: 0.75rem 1.25rem;
    text-align: center;
}

.card:hover {
    background-color: #0172bb;
    color:#eaeaea;
}

button {
    border-radius: 8px;
    border: 1px solid #0172bb;
    background-color: #0172bb;
    padding: 10px;
    justify-content: center;
    width: 200px;
    margin: 0 auto;
    text-decoration: none;
    color: #eaeaea;
}

button:hover {
    border: 1px solid #002e4b;
    background-color: #002e4b;
    color: #eaeaea;
}

.gallery {
    columns: 2;
    margin-bottom: 70px;
}

.gallery-item {
    object-fit: cover;
    display: inline-block;
    width: 100%;
    height: 100%;
    overflow: hidden;
}

footer a {
    display: block;
    margin: 4px;
    text-decoration: none;
    color: #eaeaea;
}

footer a:hover {
    color: #eec802;
}

footer p {
    margin: 4px;
}

footer {
    background-color: #0172bb;
    color: #eaeaea;
    padding-top: 50px;
    padding-bottom: 50px;
}

.footer-grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 1rem;
    max-width: 80%;
    margin-left: 15%;
}

.footer-subheading {
    font-weight: 600;
    font-size: 20px;
}

#copyright {
    text-align: center;
}

.map {
    width: 100%;
    object-fit: contain;
}

@media only screen and (max-width: 600px) {
    .grid {
        grid-template-columns: 1fr;
    }

    .grid-sm {
        grid-template-columns: 1fr;
    }

    .footer-grid {
        grid-template-columns: 1fr;
    }
}

